ai-office-server/kubernetes/argocd/yml/00-monitoring-mtls.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/istio.yml"
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/prometheus.yml"
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/kiali-operator.yml"
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/opencost.yml"
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: monitoring
spec:
  mtls:
    mode: STRICT
