ai-office-server/kubernetes/argocd/yml/argocd-self.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/argocd-self.yml"
  labels: {}
