ai-office-server/kubernetes/argocd/yml/gateway-api-crds.yml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/gateway-api-crds.yml"
  labels: {}
