ai-office-server/kubernetes/argocd/yml/istio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/istio.yml"
  labels:
    istio-injection: enabled
