ai-office-server/kubernetes/argocd/yml/sealed-secrets.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/sealed-secrets.yml"
  labels: {}
