ai-office-server/kubernetes/argocd/yml/tailscale.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: tailscale
spec:
  mtls:
    mode: STRICT
