ai-office-server/kubernetes/argocd/yml/kiali-operator.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/kiali-operator.yml"
  labels:
    istio-injection: enabled
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - "alexmonitoring.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kiali
      backendRefs:
        - name: kiali
          namespace: istio-system
          port: 20001
