ai-office-server/kubernetes/argocd/yml/argocd-server-access.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
  annotations:
    tailscale.com/expose: "true"
    external-dns.alpha.kubernetes.io/target: "141192d6-c05c-4cb4-816b-56bd6ce29b1b.cfargotunnel.com"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.snowse.io"
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
  hostnames:
    - "alexargocd.snowse.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: argocd
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: argocd-policy
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: argocd-server
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["cloudflared", "istio-system"]
