ai-office-server/kubernetes/argocd/yml/discord-bot.yml
apiVersion: v1
kind: Namespace
metadata:
  name: discord-bot
  annotations:
    repo: "https://github.com/alexmickelson/office-infrastructure"
    path: "ai-office-server/kubernetes/argocd/yml/discord-bot.yml"
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: discord-bot
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: discord-bot-policy
  namespace: discord-bot
spec:
  selector:
    matchLabels:
      app: discordadminbot
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
